8292882: [lw4] PERMITS_VALUE should be removed from all source files

Reviewed-by: dsimms